make_output
logfind.c:14:2: error: expected expression before ‘char’
  char *homedir = getenv("HOME");
  ^~~~
logfind.c:22:1: error: expected ‘,’ or ‘;’ before ‘enum’
 enum Flag
 ^~~~
logfind.c:213:31: warning: ‘enum Flag’ declared inside parameter list will not be visible outside of this definition or declaration
 int search(char **terms, enum Flag logic)
                               ^~~~
logfind.c:213:36: error: parameter 2 (‘logic’) has incomplete type
 int search(char **terms, enum Flag logic)
                                    ^~~~~
logfind.c: In function ‘search’:
logfind.c:245:16: error: ‘And’ undeclared (first use in this function)
   if (logic == And)
                ^~~
logfind.c:245:16: note: each undeclared identifier is reported only once for each function it appears in
logfind.c:249:21: error: ‘Or’ undeclared (first use in this function)
   else if (logic == Or)
                     ^~
logfind.c: In function ‘process_args’:
logfind.c:285:7: error: variable ‘flag’ has initializer but incomplete type
  enum Flag flag = And;
       ^~~~
logfind.c:285:19: error: ‘And’ undeclared (first use in this function)
  enum Flag flag = And;
                   ^~~
logfind.c:285:12: error: storage size of ‘flag’ isn’t known
  enum Flag flag = And;
            ^~~~
logfind.c:301:11: error: ‘Or’ undeclared (first use in this function)
    flag = Or;
           ^~
logfind.c:334:1: warning: label ‘error’ defined but not used [-Wunused-label]
 error:
 ^~~~~
logfind.c:285:12: warning: unused variable ‘flag’ [-Wunused-variable]
  enum Flag flag = And;
            ^~~~
logfind.c: In function ‘main’:
logfind.c:343:1: warning: label ‘error’ defined but not used [-Wunused-label]
 error:
 ^~~~~
make[1]: *** [logfind] Error 1
make: *** [all] Error 2
